syntax = "proto3";
package enreach.workload;

import "google/protobuf/timestamp.proto";
import "gogoproto/gogo.proto";

option go_package = "enreach/x/workload/types";

message EpochInfo {
  uint64 number = 1; 
  google.protobuf.Timestamp startTime = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true]; 
  uint64 startBlock = 3; 
  google.protobuf.Timestamp endTime = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true]; 
  uint64 endBlock = 5; 
  
}
