syntax = "proto3";

package enreach.workload;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "enreach/workload/params.proto";
import "enreach/workload/workload.proto";
import "enreach/workload/superior.proto";
import "enreach/workload/epoch_info.proto";
import "enreach/workload/era_info.proto";

option go_package = "enreach/x/workload/types";

// GenesisState defines the workload module's genesis state.
message GenesisState {
  
  string   adminAccount   = 1;
  // params defines all the parameters of the module.
  Params    params    = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  Superior  superior  = 3;
  EpochInfo currentEpoch = 4;
  EpochInfo pendingNextEpoch = 5;
  EraInfo currentEra = 6;
  EraInfo pendingNextEra = 7;
}

